reafatoring permission scopes + api
